# Option-Strategy-Backtesting-Engine

./: .gitignore  .gitmodules  API_REFERENCE.md  CMakeLists.txt  CMakePresets.json  README.md
Utils/: HashUtil.h  Metrics.h  Roots.h  TimeUtil.h
bindings/: Bindings.h  CMakeLists.txt  ChronoCast.h  DataStructureBindings.cpp  EngineBindings.cpp  EnumBindings.cpp  EventBindings.cpp  MasterBindings.cpp  PricingBindings.cpp  StrategyBindings.cpp  bindings.cpp
include/: Backtester.h  BrokerModel.h  DataHandler.h  DataSourceFactory.h  Date.h  Event.h  Eventhandler.h  Executionhandler.h  OptionChain.h  Options.h  Portfolio.h  RandomWalk.h  Strategy.h
include/Pricing/: BlackScholes.h  IPricingModel.h
scripts/: CMakeLists.txt  processdata.cpp
src/: Backtester.cpp  DataHandler.cpp  DataSourceFactory.cpp  Date.cpp  Event.cpp  OptionChain.cpp  Options.cpp  Portfolio.cpp  RandomWalk.cpp  main.cpp
src/Pricing/: BlackScholes.cpp
